верстка і адаптив gift i scroll
верстка .gift-button, .popup-gift, .scroll-button
адаптив .gift-button, .popup-gift, .scroll-button

--- a/src/index.html
+++ b/src/index.html
@@ -703,6 +703,33 @@
 				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
 			</div>
 		</div>
+		<div class="gift-button-a gift-animated">
+			<div class="gift-button__wrapper">
+				<div class="gift-button__circle">
+					<img class="svg-gift" src="images/svg/gift.png" alt="gift">
+				</div>
+			</div>
+		</div>
+		<div data-modal class="popup-gift popup">
+			<div class="popup-gift__body popup__body">
+				<h4 class="popup-gift__title popup__title">У нас є для вас подарунок !</h4>
+				<div class="gift-button">
+					<div class="gift-button__wrapper">
+						<div class="gift-button__circle">
+							<img class="svg-gift" src="images/svg/gift.png" alt="gift">
+						</div>
+					</div>
+				</div>
+				<p class="popup-gift__text">
+					Введіть промокод <span>PalenChik</span> в розділі "Калькулятор" або скажіть його дизайнеру (під час
+					телефонного дзвінка) та отримайте знижку <span>30%</span> на будь-які види послуг
+				</p>
+				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
+			</div>
+		</div>
+		<div class="scroll-button">
+			<img class="svg-scroll" src="images/svg/up-arrow.png" alt="scroll to start">
+		</div>
 	</main>
 
 	<footer>
