--- a/src/index.html
+++ b/src/index.html
@@ -671,7 +671,7 @@
 			<div class="popup-design__body popup__body">
 				<h4 class="popup-design__title popup__title">Замовити дизайн портрета</h4>
 				<div class="popup-design__upload">
-					<input type="file" class="upload" hidden="hidden">
+					<input type="file" class="upload popup-upload" hidden="hidden">
 					<button class="upload-btn"><img src="images/svg/camera.png" class="svg" alt="svg">
 						Завантажте
 						фотографію</button>
