JS: burger-menu з багом
баг при відкриванні меню і недороблене закривання при натисканні на один з елементів burger-list

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
 				</div>
 				<!--     		BURGER MENU     -->
 				<div class="header-menu__burger">
-					<img src="images/svg/menu.png" class="svg__big" alt="menu">
+					<img src="images/svg/menu.png" class="svg__big menu" alt="menu">
+					<img src="images/svg/close.png" class="svg__big close-menu" alt="close-menu">
 				</div>
 				<div data-modal class="header-menu__list burger-list">
 					<div class="burger-list__item">
