--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 					<img src="images/svg/menu.png" class="svg__big menu" alt="menu">
 					<img src="images/svg/close.png" class="svg__big close-menu" alt="close-menu">
 				</div>
-				<div data-modal class="header-menu__list burger-list">
+				<div data-modal class="header-menu__list burger-list" style="display: none;">
 					<div class="burger-list__item">
 						<a href="#styles">Картина з вашого фото</a>
 					</div>
