JS: .customers slider

--- a/src/index.html
+++ b/src/index.html
@@ -529,7 +529,7 @@
 									удивлению, очень скоро мне прислали не просто несколько, а целых 15 разных макетов!
 									Я выбрал
 									самый лучший и оформил заказ.</p>
-								<p class="customers__name"><span>Олег Петров</span> м. Київ</p>
+								<p class="customers__name"><span>Олег Петров</span></p>
 							</div>
 						</div>
 					</div>
@@ -553,7 +553,7 @@
 									Теперь он висит
 									тут на почетном месте, и я каждый раз любую им. Всем моим родным тоже очень
 									понравился!</p>
-								<p class="customers__name"><span>Ірина Антонова</span> м. Дніпро</p>
+								<p class="customers__name"><span>Ірина Антонова</span></p>
 							</div>
 						</div>
 					</div>
@@ -578,10 +578,12 @@
 									они очень важны, и здесь они прикольно сделаны – часы нарисовали, свитерок мой
 									любимый, маечка с
 									резиночкой. Очень позитивный шарж, сделанный по моей фотографии.</p>
-								<p class="customers__name"><span>Нурлан Сабуров</span> м. Ужгород</p>
+								<p class="customers__name"><span>Нурлан Сабуров</span></p>
 							</div>
 						</div>
 					</div>
+					<img src="images/svg/right-arrow.png" alt="previous slide" class="previous">
+					<img src="images/svg/right-arrow.png" alt="next slide" class="next">
 				</div>
 			</div>
 		</section>
