JS: bux fix .customers slider, scroll to top

--- a/src/index.html
+++ b/src/index.html
@@ -582,8 +582,9 @@
 							</div>
 						</div>
 					</div>
-					<img src="images/svg/right-arrow.png" alt="previous slide" class="previous">
-					<img src="images/svg/right-arrow.png" alt="next slide" class="next">
+					<button class="previous-btn"><img src="images/svg/right-arrow.png" alt="previous slide"
+							class="previous"></button>
+					<button class="next-btn"><img src="images/svg/right-arrow.png" alt="next slide" class="next"></button>
 				</div>
 			</div>
 		</section>
@@ -741,9 +742,9 @@
 				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
 			</div>
 		</div>
-		<div class="scroll-button">
+		<button class="scroll-button">
 			<img class="svg-scroll" src="images/svg/up-arrow.png" alt="scroll to start">
-		</div>
+		</button>
 	</main>
 
 	<footer>
