--- a/src/index.html
+++ b/src/index.html
@@ -241,28 +241,28 @@
 							<input type="file" class="upload" hidden="hidden">
 							<span class="upload-span">Файл не вибрано</span>
 						</div>
-						<select name="size" id="" class="body__select">
+						<select name="size" id="size" class="body__select">
 							<option value="">Виберіть розмір картини</option>
-							<option value="">40х50</option>
-							<option value="">50х70</option>
-							<option value="">70х70</option>
-							<option value="">70х100</option>
+							<option value="2569">40х50</option>
+							<option value="2919">50х70</option>
+							<option value="3472">70х70</option>
+							<option value="3794">70х100</option>
 						</select>
-						<select name="material" id="" class="body__select">
+						<select name="material" id="material" class="body__select">
 							<option value="">Виберіть матеріал картини</option>
-							<option value="">Полотно з волокна</option>
-							<option value="">Лянне полотно</option>
-							<option value="">Полотно з натуральної бавовни</option>
+							<option value="1">Полотно з волокна</option>
+							<option value="1.2">Лянне полотно</option>
+							<option value="1.5">Полотно з натуральної бавовни</option>
 						</select>
-						<select name="additional" id="" class="body__select">
-							<option value="">Додаткові послуги</option>
-							<option value="">Покриття арт-гелем</option>
-							<option value="">Експресс-виготовлення</option>
-							<option value="">Доставка готових робіт</option>
+						<select name="additional" id="options" class="body__select">
+							<option value="0">Додаткові послуги</option>
+							<option value="120">Покриття арт-гелем</option>
+							<option value="250">Експресс-виготовлення</option>
+							<option value="74">Доставка готових робіт</option>
 						</select>
 						<input type="text" placeholder="Введіть промокод" class="body__promocode">
 						<div class="body__calc-price">
-							<p>Виберіть розмір і матеріал картини</p>
+							Виберіть розмір і матеріал картини
 						</div>
 						<div class="body__button">
 							<button class="button-order">Швидке замовлення</button>
