CSS: .sizes hover-img

--- a/src/index.html
+++ b/src/index.html
@@ -396,6 +396,7 @@
 				<div class="sizes__picture picture">
 					<div class="picture__image">
 						<img src="images/sizes-1.png" alt="Чисте полотно">
+						<img src="images/sizes-1-1.png" class="picture__img-hover" alt="Приклад роботи">
 						<div class="picture__body">
 							<h3 class="picture__size">40x50</h3>
 							<div class="picture__prices">
@@ -408,6 +409,7 @@
 				<div class="sizes__picture picture">
 					<div class="picture__image">
 						<img src="images/sizes-2.png" alt="Чисте полотно">
+						<img src="images/sizes-2-1.png" class="picture__img-hover" alt="Приклад роботи">
 						<div class="picture__body">
 							<h3 class="picture__size">50x70</h3>
 							<div class="picture__prices">
@@ -420,6 +422,7 @@
 				<div class="sizes__picture picture hit-sales">
 					<div class="picture__image">
 						<img src="images/sizes-3.png" alt="Чисте полотно">
+						<img src="images/sizes-3-1.png" class="picture__img-hover" alt="Приклад роботи">
 						<div class="picture__body">
 							<h3 class="picture__size">70x70</h3>
 							<div class="picture__prices">
@@ -435,6 +438,7 @@
 				<div class="sizes__picture picture">
 					<div class="picture__image">
 						<img src="images/sizes-4.png" alt="Чисте полотно">
+						<img src="images/sizes-4-1.png" class="picture__img-hover" alt="Приклад роботи">
 						<div class="picture__body">
 							<h3 class="picture__size">70x100</h3>
 							<div class="picture__prices">
