FINAL image changes

--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
 			<div class="container">
 				<section class="popart">
 					<div class="popart__image">
-						<img src="images/popart.png" class="photo" alt="popart image">
+						<img src="images/popart.jpg" class="photo" alt="popart image">
 					</div>
 					<div class="popart__description">
 						<div class="popart__title title">Дивовижний портрет фліп-флап в стилі поп-арт</div>
@@ -298,7 +298,7 @@
 						alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-3.jpg" class="photo lovers all"
+					<img src="images/portfolio-3.jpeg" class="photo lovers all"
 						alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
