добавив нове модальне вікно timer

--- a/src/index.html
+++ b/src/index.html
@@ -736,6 +736,26 @@
 				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
 			</div>
 		</div>
+		<div data-modal class="popup-consultation popup-consultation-timer popup">
+			<div class="popup-consultation__body popup__body">
+				<h4 class="popup-consultation__title popup__title">Ви знаходитесь на сайті більше 1хв...</h4>
+				<h4 class="popup-consultation__subtitle popup__subtitle">Бажаєте замовити зворотній дзвінок?</h4>
+				<form action="#">
+					<div class="popup-consultation__inputs popup__inputs">
+						<input type="text" name="name" placeholder="Ваше ім'я" class="popup-consultation__input popup__input">
+						<input type="text" name="phone" placeholder="Ваш телефон"
+							class="popup-consultation__input popup__input">
+					</div>
+					<div class="popup-consultation__button popup__button">
+						<button class="button-order">Замовити</button>
+					</div>
+				</form>
+				<img src="./images/svg/spinner.gif" class="loading" alt="loading">
+				<img src="./images/svg/success.png" class="success" alt="success">
+				<img src="./images/svg/failure.png" class="failure" alt="failure">
+				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
+			</div>
+		</div>
 		<div class="gift-button-a gift-animated">
 			<div class="gift-button__wrapper">
 				<div class="gift-button__circle">
